<resources>
    <string name="app_name">Store_Application_control</string>
    <string name="user_name">Hello, </string>
    <string name="message_to_user">Check Amazing Recipes\n</string>
    <string name="searsh_any_res">search any Recipe...</string>
    <string name="home_text">Home</string>
    <string name="cards_text">Cards</string>
    <string name="support_text">Support</string>
    <string name="more_text">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text">Register</string>
    <string name="have_account_text">Already Have account?</string>
    <string name="sign_in_text">sign in</string>
    <string name="signIn_text">Sign In</string>
    <string name="dont_have_account_text">Dont have account?</string>
    <string name="Categories_Text">Categories</string>
    <string name="Items_text">Items</string>
    <string name="seeMore_txt">See more</string>
    <string name="splash_message">Easy way to buy\nyour dream car</string>
    <string name="splach_large_txt">The Fashion App That\nMakes You Look Your Best</string>
    <string name="splach_small_txt">Each Women has a unique Style, We help you to\ncreate your very own Style become you deserve\n to shine like star.</string>
    <string name="get_started_txt">Get Started</string>
    <string name="all_txt">All</string>
    <string name="popular_txt">Popular</string>
    <string name="women_txt">Women\'s</string>
    <string name="men_txt">men\'s</string>
    <string name="product_details">Product Details</string>
    <string name="colthes_type_txt">Clothes Type :</string>
    <string name="prouct_Des_txt">Product Description :</string>
    <string name="colthes_color_txt">Select Color :</string>
    <string name="total_text">Total Price</string>
    <string name="add_to_card_txt">Add to Cart</string>
    <string name="my_card_text">My Cart</string>
    <string name="price_text">Price :</string>
    <string name="delevery_ser_txt">Delvery Service :</string>
    <string name="total_txt">Total Price :</string>
    <string name="continue_to_payment_txt_res">Continue to payment</string>
    <string name="email_error">email must end with(@gmail.com)</string>
    <string name="less_char_name_error">user name must be at least 6 characters\n</string>
    <string name="user_empty_error">username mustn\'t be empty</string>
    <string name="email_empty_error_text">"email mustn't be empty "</string>
    <string name="email_empty_error_txt">email mustn\'t be empty</string>
    <string name="password_empty_hint_txt">password mustn\'t be empty</string>
    <string name="conPasword_empty_hint_txt">conpassword mustn\'t be empty</string>
    <string name="password_not_matching_text">password not matching</string>
    <string name="pass_word_matching">password must matching(Aa#@-$) \n must be at least 6 characters</string>
    <string name="addcard_text">Add card</string>
    <string name="fill_data_txt">Fill your card data</string>
    <string name="cardholder_txt_res">Cardholder name</string>
    <string name="cardholder_hint_res">Flexy</string>
    <string name="cardNum_hint_res">xxxx xxxx xxxx xxxx</string>
    <string name="cardNumber_txt_res">Card number</string>
    <string name="expiration_hint_res">15/25</string>
    <string name="SecurityCode_txt_res">Security code</string>
    <string name="scurity_hint_res">***</string>
    <string name="save_text_res">Save</string>
    <string name="set_as_default_txt_res">SET AS DEFAULT</string>
    <string name="expiration_txt_res">Expiration code</string>
    <string name="checked">These pieces of information will be used as default inforamation</string>
    <string name="unChecked">Every default data has been espunged</string>
    <string name="order_now_txt">Order now</string>
    <string name="new_Category_text_res">New Category</string>
    <string name="new_bunner_text">New Bunner</string>
    <string name="new_Product_text_res">New Product</string>
    <string name="product_name_txt_res">Product name</string>
    <string name="product_price_txt_res">Product price</string>
    <string name="product_DelveryService_txt_res">Delvery service</string>
    <string name="product_Quantity_txt_res">Product quantity</string>
    <string name="product_Category_txt_res">Product category</string>
    <string name="category_name_txt_res">Category name</string>
    <string name="product_name_hint">Pant...</string>
    <string name="product_price_hint">999\n</string>
    <string name="product_delService_hint">1.5...</string>
    <string name="product_quantity_hint">100...</string>
    <string name="product_description_hint">This Pro...</string>
    <string name="product_description_txt_res">Product description</string>
    <string name="email_Alredy_Used_text_Res">This Email is Already Used please change your email and try again !</string>
    <string name="email_alredy_used">This email already Used !</string>
    <string name="user_card_text">User Card</string>
    <string name="user_name_text_res">Name :</string>
    <string name="user_email_text_res">Email :</string>
    <string name="user_sex_text_res">Sex :</string>
    <string name="cancel_text_res">cancel</string>
    <string name="account_Created">The account has been created successfully...</string>
    <string name="category_name_hint">Nike...</string>
    <string name="adding_txt">Adding...</string>
    <string name="empty_categoryname_hint">Category name mustn\'t be empty...</string>
    <string name="image_null_text">To ensure the correctness of the process, please add a picture of the category.</string>
    <string name="inputsEmpty">This inpute mustn\'t be empty</string>
    <string name="next_text_res">Next</string>
    <string name="add_product">add Product</string>
    <string name="getCategory_canceled">The operation is canceled</string>
    <string name="add_pro_image">Product image is Empty !</string>
    <string name="no_category_result">No Categories !</string>
    <string name="add_categories_text">Add Categories</string>
    <string name="select_the_pro_categ_text">Please select product category.</string>
    <string name="All_Text">"All Products "</string>
    <string name="product_text">products</string>
    <string name="card_Added">Card Added.</string>
    <string name="card_Failure">Card Failure To Added.</string>
    <string name="dele_item_dialog_text">Are you sure you want deleting...</string>
    <string name="delete_text">Delete</string>
    <string name="deleting_text">deleting...</string>
    <string name="deleted_text">Deleted Card.</string>
    <string name="buyer_card">Buyer Card</string>
    <string name="buyer_name_txt_res">  Buyer Name</string>
    <string name="buyer_name_hint">buye name...</string>
    <string name="buyer_email_txt_res">Buyer email</string>
    <string name="buyer_email_hint">example@gmail.com</string>
    <string name="buyer_phone_txt_res">Buyer Phone</string>
    <string name="buyer_phone_hint">phone number...</string>
    <string name="order_btn_text">Order</string>
    <string name="name_emty">buyer name mustn\'t be empty!</string>
    <string name="email_emty">buyer email mustn\'t be Empty.</string>
    <string name="phone_emty">phone mistn\'t be Empty .</string>
    <string name="phone_error">Must consist of 9 numbers.</string>
    <string name="phone_start_num">phone must start with \"07\" or \"06\".</string>
    <string name="no_carts_text">No Carts</string>
    <string name="add_cards_text">Add cards</string>
    <string name="write_message_text">write message...</string>
    <string name="canceled_sebd_message">Canceled sending Message.</string>
    <string name="Failed_sebd_message">Failed sending message.</string>
    <string name="message_failed_text">failed !</string>
    <string name="sign_email_text_res">User Email</string>
    <string name="sign_password_text_res">User Password</string>
    <string name="send_resetEmail">Send</string>
    <string name="forgetText_res">Forget password</string>
    <string name="goback_text">Go back ?</string>
    <string name="search_text">Search</string>
    <string name="bunner_text">Bunner</string>
    <string name="category_text">Category</string>
    <string name="navigation_product_text">Product</string>
    <string name="message_text">Messages</string>
    <string name="conversation_text">Conversations</string>
    <string name="chat_text">Chats</string>
    <string name="add_proCategory">Please select Product Category.</string>
    <string name="product_upDatedText">Product upDated Successful.</string>
    <string name="upDate_text_res">Update</string>
    <string name="searsh_text_res">Search...</string>
    <string name="add_text">Please add searching text.</string>
    <string name="refrech_text">Refrech</string>
    <string name="oreder_items_Txt">Order Items :</string>
    <string name="buyer_info_tet">Buyer Info :</string>
    <string name="buyer_name">Buyer Name :</string>
    <string name="buyer_email">Buyer Email :</string>
    <string name="buyer_phone">Buyer Phone :</string>
    <string name="orders_btn_text">Orders\n</string>
    <string name="upDate_bunner_text_res">UpDate Bunner</string>
</resources>